# amvka-ai-assistant-terminal

./: .gitignore  CHANGELOG.md  PUBLISH_GITHUB_ACTIONS.md  PUBLISH_TO_PYPI.md  README.md  READY_TO_PUBLISH.md  build.sh  install-dev.sh  pyproject.toml
.github/workflows/: publish.yml
